Added logout feature and a blank dashboard

--- a/templates/auth/doctor_reg.html
+++ b/templates/auth/doctor_reg.html
@@ -5,14 +5,18 @@
             {% extends "base.html" %}
 
             {% block content %}
+        <div class="ui stacked segment">
             <h3>Request for a doctor account</h3>
             <br>
             <form action={% url 'doctor-register' %} method="POST">
                 {% csrf_token %}
                 <div class="ui large form">
                     <div class="required field">
-                    <label for="username">Username</label>
-                    <input type="text" placeholder="{{ random_username }}" value="{{ random_username }}" name="username">
+                        <label for="username">Username</label>
+                        <div class="ui icon input">
+                            <input id="usernamefield" type="text" placeholder="{{ random_username }}" value="{{ random_username }}" name="username">
+                            <i class="sync alternate link icon" id="randomgen" title="Generate a random username"></i>
+                        </div>
                     </div>
                     <div class="required field">
                     <label for="password">Password</label>
@@ -31,14 +35,10 @@
                 <br>
                 <input type="submit" value="Register" class="ui fluid large blue button" />
             </form>
-            {% endblock %}
-        </div>
-        <div class="column"></div>
+        <br>
+        <div style="text-align:center;">Already have an account? <strong><a href="{% url 'login' %}"> Login</a>.</strong></div>
+    </div>
     </div>
 </div>
 
-<script>
-    $('#genkeyfield').popup();
-
-
-</script>
+{% endblock %}
