fixed quantity field

--- a/templates/dashboard/update_schedule.html
+++ b/templates/dashboard/update_schedule.html
@@ -60,7 +60,7 @@
 
                         <div class="required six wide field">
                             <label for="quantity">Quantity</label>
-                            <input id="med_qty" type="number" min=1 name="quantity" value="{% if quantity %} {{ quantity }} {% endif %}">
+                            <input id="med_qty" type="number" min=1 name="quantity" value="{{ quantity }}">
                         </div>
                     </div> 
 
